--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -62,6 +62,7 @@
                             <div class="col-12">
                                 <a href="#" th:href="@{/addnew}"><button class="btn bg-success text-white">Add New Student</button></a>
                                 <a href="#" th:href="@{/byname}"><button class="btn bg-danger text-white">Search by name</button></a>
+                                <a href="#" th:href="@{/byroll}"><button class="btn bg-info text-white">Search by roll</button></a>
                             </div>
                         </div>
                     </div>
